--- a/apps/my-app/pod.yaml
+++ b/apps/my-app/pod.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: hello-world
+  name: hello-world-v4
 spec:
   containers:
     - name: hello
-      image: nginx
+      image: httpd
